Aggregation is now working
